--- a/Responsive Web Design(NEW)/2 CSS Color Markers/2 CSS Color Markers.html
+++ b/Responsive Web Design(NEW)/2 CSS Color Markers/2 CSS Color Markers.html
@@ -313,3 +313,59 @@ In the .green CSS rule, change the background-color property to background. -->
 }
 
 
+<!-- Step 61
+For this marker, you'll use hex color codes for your gradient.
+
+Use the linear-gradient function and set gradientDirection to 180deg. 
+And for the first color argument, use a hex color code with the values 55 for red, 68 for green, and 0D for blue. -->
+
+.green {
+  background: linear-gradient(180deg, #55680D);
+}
+
+
+<!-- Step 62
+For the second color argument, use a hex color code with the values 71 for red, F5 for green, and 3E for blue. -->
+
+.green {
+  background: linear-gradient(180deg, #55680D, #71F53E);
+}
+
+
+<!-- Step 63
+That's looking better, but the bottom edge of the green marker needs to be darker to add a little more dimension.
+
+In the same linear-gradient function, add a hex color code with the values 11 for red, 6C for green, and 31 for blue as the third color argument. -->
+
+.green {
+  background: linear-gradient(180deg, #55680D, #71F53E, #116C31);
+}
+
+
+<!-- Step 64
+Even without the color-stops, you might have noticed that the colors for the green marker transition at the same points as the red marker. 
+The first color is at the start (0%), the second is in the middle (50%), and the last is at the end (100%) of the gradient line.
+
+The linear-gradient function automatically calculates these values for you, and places colors evenly along the gradient line by default.
+
+In the .red CSS rule, remove the three color stops from the linear-gradient function to clean up your code a bit. -->
+
+.red {
+  background: linear-gradient(180deg, rgb(122, 74, 14), rgb(245, 62, 113), rgb(162, 27, 27));
+}
+
+
+<!-- Step 65
+If no gradientDirection argument is provided to the linear-gradient function, it arranges colors from top to bottom, or along a 180 degree line, by default.
+
+Clean up your code a little more by removing the gradientDirection argument from both linear-gradient functions. -->
+
+.red {
+  background: linear-gradient( rgb(122, 74, 14), rgb(245, 62, 113), rgb(162, 27, 27));
+}
+
+.green {
+  background: linear-gradient(#55680D, #71F53E, #116C31);
+}
+
+
