--- a/Responsive Web Design(NEW)/2 CSS Color Markers/3 CSS Color Markers.html
+++ b/Responsive Web Design(NEW)/2 CSS Color Markers/3 CSS Color Markers.html
@@ -7,3 +7,38 @@ In the .blue CSS rule, change the background-color property to background. -->
 }
 
 
+<!-- Step 67
+Use the linear-gradient function, and pass in the hsl function with the values 186 for hue, 76% for saturation, and 16% for lightness as the first color argument. -->
+
+.blue {
+  background: linear-gradient(hsl(186, 76%, 16%));
+}
+
+
+<!-- Step 68
+As the second color argument, pass in the hsl function with the values 223 for hue, 90% for saturation, and 60% for lightness. -->
+
+.blue {
+  background: linear-gradient(hsl(186, 76%, 16%), hsl(223, 90%, 60%));
+}
+
+
+<!-- Step 69
+And as the third color argument, pass in the hsl function with the values 240 for hue, 56% for saturation, and 42% for lightness. -->
+
+.blue {
+  background: linear-gradient(hsl(186, 76%, 16%), hsl(223, 90%, 60%), hsl(240, 56%, 42%));
+}
+
+
+<!-- Step 70
+Now that the markers have the correct colors, it's time to build the marker sleeves. Start with the red marker.
+
+Inside the red marker div, create a new div and give it a class of sleeve. -->
+
+      <div class="marker red">
+        <div class="sleeve">
+        </div>
+      </div>
+
+
