--- a/Responsive Web Design(NEW)/2 CSS Color Markers/3 CSS Color Markers.html
+++ b/Responsive Web Design(NEW)/2 CSS Color Markers/3 CSS Color Markers.html
@@ -150,7 +150,9 @@ Create a new rule to target both the cap and sleeve classes, and set display to 
 <!-- Step 79
 In the last project, you learned a little bit about borders and the border-color property.
 
-All HTML elements have borders, though they're usually set to none by default. With CSS, you can control all aspects of an element's border, and set the border on all sides, or just one side at a time. For a border to be visible, you need to set its width and style.
+All HTML elements have borders, though they're usually set to none by default. 
+With CSS, you can control all aspects of an element's border, and set the border on all sides, or just one side at a time. 
+For a border to be visible, you need to set its width and style.
 
 In the .sleeve CSS rule, add the border-left-width property with the value 10px. -->
 
@@ -254,5 +256,75 @@ Add a cap and sleeve to both the green and blue markers. You can just copy the d
         <div class="cap"></div>
         <div class="sleeve"></div>
       </div>
+
+
+<!-- Step 86
+The last thing you'll do is add a slight shadow to each marker to make them look even more realistic.
+
+The box-shadow property lets you apply one or more shadows around an element. Here is basic syntax:
+
+box-shadow: offsetX offsetY color;
+Start by adding a simple shadow to the red marker.
+
+In the .red CSS rule, add the box-shadow property with the values 5px for offsetX, 5px for offsetY, and red for color. -->
+
+.red {
+  background: linear-gradient(rgb(122, 74, 14), rgb(245, 62, 113), rgb(162, 27, 27));
+  box-shadow: 5px 5px red;
+}
+
+
+<!-- Step 87
+As you can see, you added a simple red shadow around your marker that's 5 pixels to the right, and 5 pixels down.
+
+But what if you wanted to position your shadow on the opposite side? You can do that by using negative values for offsetX and offsetY.
+
+Update the values for the box-shadow property, and set offsetX to -5px, and offsetY to -5px. -->
+
+.red {
+  background: linear-gradient(rgb(122, 74, 14), rgb(245, 62, 113), rgb(162, 27, 27));
+  box-shadow: -5px -5px red;
+}
+
+
+<!-- Step 88
+Notice that the edges of the shadow are sharp. This is because there is an optional blurRadius value for the box-shadow property:
+
+box-shadow: offsetX offsetY blurRadius color;
+If a blurRadius value isn't included, it defaults to 0 and produces sharp edges. The higher the value of blurRadius, the greater the blurring effect is.
+
+In the .green CSS rule, add the box-shadow property with the values 5px for offsetX, 5px for offsetY, 5px for blurRadius, and green for color. -->
+
+.green {
+  background: linear-gradient(#55680D, #71F53E, #116C31);
+  box-shadow: 5px 5px 5px green;
+}
+
+
+<!-- Step 89
+But what if you wanted to expand the shadow out further? You can do that with the optional spreadRadius value:
+
+box-shadow: offsetX offsetY blurRadius spreadRadius color;
+Like blurRadius, spreadRadius defaults to 0 if it isn't included.
+
+Practice by adding a 5 pixel shadow directly around the blue marker.
+
+In the .blue CSS rule, add the box-shadow property with the values 0 for offsetX, 0 for offsetY, 0 for blurRadius, 5px for spreadRadius, and blue for color. -->
+
+.blue {
+  background: linear-gradient(hsl(186, 76%, 16%), hsl(223, 90%, 60%), hsl(240, 56%, 42%));
+  box-shadow: 0 0 0 5px blue;
+}
+
+
+<!-- Step 90
+Now that you're familiar with the box-shadow property you can finalize the shadows, starting with the one for the red marker.
+
+In the .red CSS rule, update the values for the box-shadow property so offsetX is 0,offsetY is 0, blurRadius is 20px, spreadRadius is 0, and color is red. -->
+
+.red {
+  background: linear-gradient(rgb(122, 74, 14), rgb(245, 62, 113), rgb(162, 27, 27));
+  box-shadow: 0 0 20px 0 red;
+}
 
 
