--- a/Responsive Web Design(NEW)/3 Registration Form/1 Registration form.html
+++ b/Responsive Web Design(NEW)/3 Registration Form/1 Registration form.html
@@ -13,3 +13,35 @@ Add opening and closing html tags below the DOCTYPE so you have a place to start
 </html>
 
 
+<!-- Step 3
+Next, add opening and closing head and body tags within the html element. -->
+
+<!DOCTYPE html>
+<html>
+  <head>
+  </head>
+  <body>
+  </body>
+</html>
+
+
+<!-- Step 4
+Add a title element to the head, and give your project a title of Registration Form. Also, nest a self-closing link element in the head element. 
+Give it a rel attribute value of stylesheet, a type attribute value of text/css, and an href attribute value of styles.css. -->
+
+  <head>
+    <title>Registration Form</title>
+    <link rel="stylesheet" type="text/css" href="styles.css"/>
+  </head>
+  <body>
+  </body>
+
+
+<!-- Step 5
+Within the body, provide a heading context for the content, by adding an h1 with the text Registration Form. -->
+
+  <body>
+    <h1>Registration Form</h1>
+  </body>
+
+
