--- a/Responsive Web Design(NEW)/3 Registration Form/1 Registration form.html
+++ b/Responsive Web Design(NEW)/3 Registration Form/1 Registration form.html
@@ -44,4 +44,54 @@ Within the body, provide a heading context for the content, by adding an h1 with
     <h1>Registration Form</h1>
   </body>
 
+<!-- Step 6
+Below the heading, use the following text within a paragraph element to encourage users to register:
 
+Please fill out this form with the required information -->
+
+  <body>
+    <h1>Registration Form</h1>
+    <p>Please fill out this form with the required information</p>
+  </body>
+
+
+<!-- Step 7
+To spruce the project up, let us add some CSS. Begin by giving the body a width of 100%, and a height of 100vh. -->
+
+body {
+  width: 100%;
+  height: 100vh;
+}
+
+
+<!-- Step 8
+Now, get rid of the horizontal scroll-bar, by setting the body default margin added by some browsers to 0. -->
+
+body {
+  width: 100%;
+  height: 100vh;
+  margin: 0;
+}
+
+
+<!-- Step 9
+That is better. Now, make the background easy on the eyes, by changing the body background-color to #1b1b32. Then, to see the text, change the color to #f5f6f7. -->
+
+body {
+  width: 100%;
+  height: 100vh;
+  margin: 0;
+  background-color: #1b1b32;
+  color: #f5f6f7;
+}
+
+
+<!-- Step 10
+As suggested by the title, you are creating a form. 
+So, after the p element, insert a form with an action attribute targeting https://register-demo.freecodecamp.org. -->
+
+  <body>
+    <h1>Registration Form</h1>
+    <p>Please fill out this form with the required information</p>
+    <form action="https://register-demo.freecodecamp.org">
+  </body>
