--- a/Responsive Web Design(NEW)/3 Registration Form/2 Registration form.html
+++ b/Responsive Web Design(NEW)/3 Registration Form/2 Registration form.html
@@ -8,3 +8,60 @@ https://www.freecodecamp.org/news/terms-of-service/ -->
         <label><input type="checkbox" required /> I accept the <a href="https://www.freecodecamp.org/news/terms-of-service/">terms and conditions</a></label>
       </fieldset>
 
+
+<!-- Step 27
+Moving on to the final fieldset. What if you wanted to allow a user to upload a profile picture?
+
+Well, the input type file allows just that. Add a label with the text Upload a profile picture: , and add an input accepting a file upload. -->
+
+      <fieldset>
+        <label>Upload a profile picture: <input type="file" /></label>
+      </fieldset>
+
+
+<!-- Step 28
+Add another label after the first, with the text Input your age (years): . Then, nest an input with the type of number.
+
+As we do not want users under the age of 13 to register, add a min attribute to the input with a value of 13. 
+Also, we can probably assume users over the age of 120 will not register; add a max attribute with a value of 120.
+
+Now, if someone tries to submit the form with values outside of the range, a warning will appear, and the form will not submit. Give it a try. -->
+
+      <fieldset>
+        <label>Upload a profile picture: <input type="file" /></label>
+        <label>Input your age (years): <input type="number" min="13" max="120"></label>        
+      </fieldset>
+
+
+<!-- Step 29
+Adding a dropdown to the form is easy with the select element. 
+The select element is a container for a group of option elements, and the option element acts as a label for each dropdown option. Both elements require closing tags.
+
+Start, by adding a select element below the two label elements. Then, nest 5 option elements within the select element. -->
+
+      <fieldset>
+        <label>Upload a profile picture: <input type="file" /></label>
+        <label>Input your age (years): <input type="number" min="13" max="120" />
+			  </label>
+        <select>
+          <option>
+          </option>
+<!--           ..............         -->
+        </select>
+      </fieldset>
+
+
+<!-- Step 30
+Nest the select element within a label element with the text How did you hear about us?. The text should come before the select element. -->
+
+      <fieldset>
+        <label>Upload a profile picture: <input type="file" /></label>
+        <label>Input your age (years): <input type="number" min="13" max="120" /></label>
+        <label>How did you hear about us?          
+          <select>
+            <option></option>
+<!--                 ............ -->
+          </select>
+        </label>
+      </fieldset>
+
