--- a/Responsive Web Design(NEW)/3 Registration Form/2 Registration form.html
+++ b/Responsive Web Design(NEW)/3 Registration Form/2 Registration form.html
@@ -65,3 +65,86 @@ Nest the select element within a label element with the text How did you hear ab
         </label>
       </fieldset>
 
+
+<!-- Step 31
+The dropdown options are currently empty. To give them content, add the following text to each subsequent option element:
+
+(select one)
+freeCodeCamp News
+freeCodeCamp YouTube Channel
+freeCodeCamp Forum
+Other -->
+
+      <fieldset>
+        <label>Upload a profile picture: <input type="file" /></label>
+        <label>Input your age (years): <input type="number" min="13" max="120" />
+			  </label>
+        <label>How did you hear about us?
+          <select>
+            <option>(select one)</option>
+            <option>freeCodeCamp News</option>
+            <option>freeCodeCamp YouTube Channel</option>
+            <option>freeCodeCamp Forum</option>
+            <option>Other</option>
+          </select>
+        </label>
+      </fieldset>
+
+
+<!-- Step 32
+Submitting the form with an option selected would not send a useful value to the server. 
+As such, each option needs to be given a value attribute. Without which, the text content of the option will be submitted to the server.
+
+Give the first option a value of "", and the subsequent option elements value attributes from 1 to 4. -->
+
+      <fieldset>
+        <label>Upload a profile picture: <input type="file" /></label>
+        <label>Input your age (years): <input type="number" min="13" max="120" />
+			  </label>
+        <label>How did you hear about us?
+          <select>
+            <option value="">(select one)</option>
+            <option value="1">freeCodeCamp News</option>
+            <option value="2">freeCodeCamp YouTube Channel</option>
+            <option value="3">freeCodeCamp Forum</option>
+            <option value="4">Other</option>
+          </select>
+        </label>
+      </fieldset>
+
+
+<!-- Step 33
+The textarea element acts like an input element of type text, but comes with the added benefit of being able to receive multi-line text, 
+and an initial number of text rows and columns.
+
+To allow users to register with a bio, add a label with the text Provide a bio: followed by a textarea element, which requires a closing tag. -->
+
+      <fieldset>
+        <label>Upload a profile picture: <input type="file" /></label>
+        <label>Input your age (years): <input type="number" min="13" max="120" />
+			  </label>
+        <label>How did you hear about us?
+          <select>
+            <option value="">(select one)</option>
+            <option value="1">freeCodeCamp News</option>
+            <option value="2">freeCodeCamp YouTube Channel</option>
+            <option value="3">freeCodeCamp Forum</option>
+            <option value="4">Other</option>
+          </select>
+        </label>
+        <label>Provide a bio:
+          <textarea></textarea>
+        </label>
+      </fieldset>
+
+
+<!-- Step 34
+The textarea appears too small. To give it an initial size, you can add the rows and cols attributes.
+
+Add an initial size of 3 rows and 30 columns. -->
+
+        <label>Provide a bio:
+		<textarea rows="3" cols="30"></textarea>
+	</label>
+
+
