--- a/Responsive Web Design(NEW)/3 Registration Form/2 Registration form.html
+++ b/Responsive Web Design(NEW)/3 Registration Form/2 Registration form.html
@@ -148,3 +148,14 @@ Add an initial size of 3 rows and 30 columns. -->
 	</label>
 
 
+<!-- Step 35
+To give Campers an idea of what to put in their bio, the placeholder attribute is used. 
+The placeholder accepts a text value, which is displayed until the user starts typing.
+
+Give the textarea a placeholder of I like coding on the beach.... -->
+
+<label>Provide a bio:
+	<textarea rows="3" cols="30" placeholder="I like coding on the beach..."></textarea>
+</label>
+
+
