--- a/Responsive Web Design(NEW)/11 Intermediate CSS by Building a Picasso Painting/2 Picasso paint.html
+++ b/Responsive Web Design(NEW)/11 Intermediate CSS by Building a Picasso Painting/2 Picasso paint.html
@@ -1,3 +1,36 @@
 <!-- Step 31
 Use an id selector to style your tan-table element. Give it a width of 450px, a height of 140px, and a background-color of #D2691E. -->
 
+#tan-table {
+  width: 450px;
+  height: 140px;
+  background-color: #D2691E;
+}
+
+
+<!-- Step 32
+Move the table into place by giving it a position of absolute, a top value of 275px, and a left value of 15px. -->
+
+position: absolute;
+top: 275px;
+left: 15px;
+
+
+<!-- Step 33
+Give the table a z-index of 1. -->
+
+z-index: 1;
+
+
+<!-- Step 34
+After your div#offwhite-character element, add a div with the id of black-character. -->
+
+<div id="black-character"></div>
+
+
+<!-- Step 35
+Within your new black-character element, add three div elements with the following id values, in order: black-hat, gray-mask, white-paper. -->
+
+<div id="black-hat"></div>
+<div id="gray-mask"></div>
+<div id="white-paper"></div>
