--- a/Responsive Web Design(NEW)/11 Intermediate CSS by Building a Picasso Painting/2 Picasso paint.html
+++ b/Responsive Web Design(NEW)/11 Intermediate CSS by Building a Picasso Painting/2 Picasso paint.html
@@ -87,3 +87,47 @@ Use an id selector to create a rule for your black-hat element. Give it a width 
   height: 0;
   border-style: solid;
 }
+
+
+<!-- Step 41
+Set the border-width of the black-hat to 150px 0 0 300px. -->
+
+border-width: 150px 0 0 300px;
+
+
+<!-- Step 42
+Just like with your white-hat, you should style the border for the black-hat element. 
+Give it a border-top-color, border-right-color, and border-bottom-color of transparent. Set the border-left-color to rgb(45, 31, 19). -->
+
+border-top-color: transparent;
+border-right-color: transparent; 
+border-bottom-color:transparent;
+border-left-color: rgb(45, 31, 19);
+
+
+<!-- Step 43
+Now position the black-hat element. Give it a position of absolute, with a top of -150px and a left of 0. -->
+
+  position: absolute;
+  top: -150px;
+  left: 0;
+
+
+<!-- Step 44
+Using an id selector, style the gray-mask element. Give it a width of 150px, a height of 150px, and a background-color of rgb(167, 162, 117). -->
+
+#gray-mask {
+  width: 150px;
+  height: 150px;
+  background-color: rgb(167, 162, 117);
+}
+
+
+<!-- Step 45
+Position the gray-mask by setting position to absolute, the top to -10px, and the left to 70px. -->
+
+  position: absolute;
+  top: -10px;
+  left: 70px;
+
+
