--- a/Responsive Web Design(NEW)/11 Intermediate CSS by Building a Picasso Painting/2 Picasso paint.html
+++ b/Responsive Web Design(NEW)/11 Intermediate CSS by Building a Picasso Painting/2 Picasso paint.html
@@ -174,3 +174,41 @@ Then give the first one an id of blue-left, and the second an id of blue-right. 
 <div class="blue" id="blue-right"></div>
 
 
+<!-- Step 51
+Use a class selector to target your new blue elements. Set the background-color to #1E90FF. -->
+
+.blue {
+  background-color: #1E90FF;
+}
+
+<!-- Step 52
+Select the blue-left element with an id selector. Give it a width of 500px and a height of 300px. -->
+
+#blue-left {
+  width: 500px;
+  height: 300px;
+}
+
+<!-- Step 53
+Now set the position to absolute, the top to 20%, and the left to 20%. -->
+
+  position: absolute;
+  top: 20%;
+  left: 20%;
+
+
+<!-- Step 54
+Next, target your blue-right element with an id selector. Set the width to 400px and the height to 300px. -->
+
+#blue-right {
+  width: 400px;
+  height: 300px;
+}
+
+
+<!-- Step 55
+Give the blue-right the correct positioning with position set to absolute, top set to 50%, and left set to 40%. -->
+
+  position: absolute;
+  top: 50%;
+  left: 40%;
