--- a/Responsive Web Design(NEW)/11 Intermediate CSS by Building a Picasso Painting/3 Picasso paint.html
+++ b/Responsive Web Design(NEW)/11 Intermediate CSS by Building a Picasso Painting/3 Picasso paint.html
@@ -43,3 +43,40 @@ The black-round-hat should probably be round. Give it a border-radius of 50% to 
 border-radius: 50%;
 
 
+<!-- Step 66
+Move the black-round-hat into place with a position of absolute, a top of -100px, and a left of 5px. -->
+
+  position: absolute;
+  top: -100px;
+  left: 5px;
+
+
+<!-- Step 67
+Put the black-round-hat on the correct layer with a z-index of -1. -->
+
+z-index: -1;
+
+
+<!-- Step 68
+Use an id selector to create a rule for your eyes-div element. Set the width to 180px and the height to 50px. -->
+
+#eyes-div {
+  width: 180px;
+  height: 50px;
+}
+
+
+<!-- Step 69
+Now move the eyes-div into position with position set to absolute, top set to -40px, and left set to 20px. -->
+
+  position: absolute;
+  top: -40px;
+  left: 20px;
+
+
+<!-- Step 70
+Give the eyes-div a z-index of 3. -->
+
+z-index: 3;
+
+
