--- a/Responsive Web Design(NEW)/11 Intermediate CSS by Building a Picasso Painting/3 Picasso paint.html
+++ b/Responsive Web Design(NEW)/11 Intermediate CSS by Building a Picasso Painting/3 Picasso paint.html
@@ -80,3 +80,44 @@ Give the eyes-div a z-index of 3. -->
 z-index: 3;
 
 
+<!-- Step 71
+Target your triangles element with an id selector. Set the width to 250px and the height to 550px. -->
+
+#triangles {
+  width: 250px;
+  height: 550px;
+}
+
+
+<!-- Step 72
+Create a class selector for your triangle elements. Set the width to 0 and the height to 0. -->
+
+.triangle  {
+  width: 0;
+  height: 0;
+}
+
+
+<!-- Step 73
+Style the border of your triangle elements. Set the border-style to solid and the border-width to 42px 45px 45px 0. -->
+
+border-style: solid;
+border-width: 42px 45px 45px 0;
+
+
+<!-- Step 74
+Give your triangle elements the correct color. 
+Set the border-top-color, border-bottom-color, and border-left-color to transparent. Set the border-right-color to Gold. -->
+
+border-top-color: transparent;
+border-bottom-color: transparent;
+border-left-color: transparent;
+border-right-color: Gold;
+
+
+<!-- Step 75
+Adjust the layout of the triangle elements with a display of inline-block. -->
+
+display: inline-block;
+
+
