--- a/Responsive Web Design(NEW)/11 Intermediate CSS by Building a Picasso Painting/3 Picasso paint.html
+++ b/Responsive Web Design(NEW)/11 Intermediate CSS by Building a Picasso Painting/3 Picasso paint.html
@@ -121,3 +121,47 @@ Adjust the layout of the triangle elements with a display of inline-block. -->
 display: inline-block;
 
 
+<!-- Step 76
+Now use an id selector for guitar. Set the width to 100%, and the height to 100px. -->
+
+#guitar {
+  width: 100%;
+  height: 100px;
+}
+
+
+<!-- Step 77
+In the same #guitar selector, set the position to absolute, the top to 120px, and the left to 0px. -->
+
+  position: absolute;
+  top: 120px;
+  left: 0px;
+
+
+<!-- Step 78
+Give the #guitar rule a z-index of 3. -->
+
+z-index: 3;
+
+
+<!-- Step 79
+Now use a class selector to target guitar. This will style the two "halves" of your guitar. 
+Set the width to 150px, the height to 120px, the background-color to Goldenrod, and the border-radius to 50%. -->
+
+.guitar {
+  width: 150px;
+  height: 120px;
+  background-color: Goldenrod;
+  border-radius: 50%;
+}
+
+
+<!-- Step 80
+Select the id with value guitar-left, and set the position to absolute and the left to 0px. -->
+
+#guitar-left {
+  position: absolute;
+  left: 0px;
+}
+
+
