--- a/Responsive Web Design(NEW)/11 Intermediate CSS by Building a Picasso Painting/3 Picasso paint.html
+++ b/Responsive Web Design(NEW)/11 Intermediate CSS by Building a Picasso Painting/3 Picasso paint.html
@@ -209,3 +209,43 @@ Give the guitar-neck a z-index of 3. -->
 z-index: 3;
 
 
+<!-- Step 86
+Time to style your eyes elements. Use a class selector to set the width to 35px, the height to 20px, 
+the background-color to #8B4513, and the border-radius to 20px 50%. -->
+
+.eyes {
+  width: 35px;
+  height: 20px;
+  background-color: #8B4513;
+  border-radius: 20px 50%;
+} 
+
+
+<!-- Step 87
+Target the class with value right and set the position to absolute, top to 15px, and right to 30px. -->
+
+.right {
+  position: absolute;
+  top: 15px;
+  right: 30px;
+}
+
+
+<!-- Step 88
+For the class with value left, create the selector and set the position to absolute, the top to 15px, and the left to 30px. -->
+
+.left {
+  position: absolute;
+  top: 15px;
+  left: 30px;
+}
+
+<!-- 
+Step 89
+One last step. The FontAwesome icons are a little too small. Target all of them with a class selector for fas, and set the font-size to 30px.
+
+With that, your Picasso painting is complete! -->
+
+.fas {
+  font-size: 30px;
+}
