--- a/Responsive Web Design(NEW)/12 Responsive Web Design by Building a Piano/1 piano.html
+++ b/Responsive Web Design(NEW)/12 Responsive Web Design by Building a Piano/1 piano.html
@@ -167,3 +167,28 @@ Move the keys into position by adjusting the #piano selector. Set the padding pr
   margin: 80px auto;
   padding: 90px 20px 0 20px;
 }
+
+
+<!-- Step 16
+Time to style the keys themselves. Create a class selector for the .key elements. 
+Set the background-color set to the value #ffffff, the position property to relative, the width property to 41px, and the height property to 175px. -->
+
+.key {
+  background-color: #ffffff;
+  position: relative;
+  width: 41px;
+  height: 175px;
+}
+
+
+<!-- Step 17
+Give the .key a margin of 2px and a float property set to left. -->
+
+.key {
+  background-color: #ffffff;
+  position: relative;
+  width: 41px;
+  height: 175px;
+  margin: 2px;
+  float: left;
+}
