--- a/Responsive Web Design(NEW)/12 Responsive Web Design by Building a Piano/2 piano.html
+++ b/Responsive Web Design(NEW)/12 Responsive Web Design by Building a Piano/2 piano.html
@@ -41,3 +41,53 @@ For the .key.black--key::after, set the width to 32px and the height to 100px. -
 }
 
 
+<!-- Step 21
+The piano needs the freeCodeCamp logo to make it official.
+
+Add an img element before your .keys element. Give the img a class of logo, and set the src to https://cdn.freecodecamp.org/platform/universal/fcc_primary.svg. 
+Give it an alt text of freeCodeCamp Logo. -->
+
+<img class="logo" src="https://cdn.freecodecamp.org/platform/universal/fcc_primary.svg" alt="freeCodeCamp Logo" />
+
+
+<!-- Step 22
+Start styling the logo by creating a .logo selector. Set the width to 200px, a position of absolute and a top set to 23px. -->
+
+.logo {
+  width: 200px;
+  position: absolute;
+  top: 23px;
+}
+
+
+<!-- Step 23
+The img element needs its parent to have a position set as a point of reference. Set the position of the #piano selector to relative. -->
+
+#piano {
+  background-color: #00471b;
+  width: 992px;
+  height: 290px;
+  margin: 80px auto;
+  padding: 90px 20px 0 20px;
+  position: relative;
+}
+
+
+<!-- Step 24
+To smooth the sharp edges of the piano and keys, start by giving the #piano a border-radius of 10px. -->
+
+border-radius: 10px;
+
+
+<!-- Step 25
+Give the .key selector a border-radius value of 0 0 3px 3px. -->
+
+.key {
+  background-color: #ffffff;
+  position: relative;
+  width: 41px;
+  height: 175px;
+  margin: 2px;
+  float: left;
+  border-radius: 0 0 3px 3px;
+}
