--- a/Responsive Web Design(NEW)/12 Responsive Web Design by Building a Piano/2 piano.html
+++ b/Responsive Web Design(NEW)/12 Responsive Web Design by Building a Piano/2 piano.html
@@ -91,3 +91,65 @@ Give the .key selector a border-radius value of 0 0 3px 3px. -->
   float: left;
   border-radius: 0 0 3px 3px;
 }
+
+
+<!-- Step 26
+Give the .key.black--key::after selector a border-radius of 0 0 3px 3px to match the keys. -->
+
+.key.black--key::after {
+  background-color: #1d1e22;
+  content: "";
+  position: absolute;
+  left: -18px;
+  width: 32px;
+  height: 100px;
+  border-radius: 0 0 3px 3px;
+}
+
+
+<!-- Step 27
+Now you need to make it responsive. Add a @media query with a max-width of 768px. -->
+
+@media (max-width: 768px) {}
+
+
+<!-- Step 28
+Add a new #piano selector within your @media query, and set the width to 358px. -->
+
+@media (max-width: 768px) {
+  #piano {
+    width: 358px;
+  }  
+}
+
+
+<!-- Step 29
+Within the @media query, add a .keys selector and set the width to 318px. -->
+
+@media (max-width: 768px) {
+  #piano {
+    width: 358px;
+  }
+  .keys {
+    width: 318px;
+  }
+}
+
+
+<!-- Step 30
+Now add a .logo selector to the @media query, and set the width property to 150px. -->
+
+@media (max-width: 768px) {
+  #piano {
+    width: 358px;
+  }
+
+  .keys {
+    width: 318px;
+  }
+
+  .logo {
+    width: 150px;
+  }
+}
+
