--- a/Responsive Web Design(NEW)/12 Responsive Web Design by Building a Piano/2 piano.html
+++ b/Responsive Web Design(NEW)/12 Responsive Web Design by Building a Piano/2 piano.html
@@ -153,3 +153,37 @@ Now add a .logo selector to the @media query, and set the width property to 150p
   }
 }
 
+
+<!-- Step 31
+You might have noticed the keys collapse when the browser window is smaller than 768px. Set overflow to hidden in the first .keys selector, 
+to take care of this issue. This property will hide any element that is pushed outside the set width value of .keys. -->
+
+.keys {
+  background-color: #040404;
+  width: 949px;
+  height: 180px;
+  padding-left: 2px;
+  overflow: hidden;
+}
+
+
+<!-- Step 32
+Add another @media rule to apply if the browser window is bigger than 769px but smaller than 1199px. -->
+
+@media (min-width: 769px) and (max-width: 1199px) {}
+
+
+<!-- Step 33
+For the new @media rule, set the width of the #piano to 675px and the width of the .keys to 633px.
+
+With that, your piano is complete! -->
+
+@media (max-width: 1199px) and (min-width: 769px) {
+  #piano {
+    width: 675px;
+  }
+  .keys {
+    width: 633px;
+  }
+}
+
