--- a/Responsive Web Design(NEW)/13 Technical Documentation Page/index.html
+++ b/Responsive Web Design(NEW)/13 Technical Documentation Page/index.html
@@ -1,9 +1,15 @@
 <!DOCTYPE html>
 <html>
-  <head></head>
+  <head>
+    <link rel="stylesheet" href="styles.css">
+  </head>
   <body>
     <main id="main-doc">
-      
+      <section class="main-section"></section>
+      <section class="main-section"></section>
+      <section class="main-section"></section>
+      <section class="main-section"></section>
+      <section class="main-section"></section>
     </main>
   </body>
 </html>
